# megarover_samples_ros2

./: CMakeLists.txt  README.md  package.xml
config/: diff_drive_controller.yaml  gazebo_publish_rate.yaml  mapper_params_online_sync.yaml  navigation_param.yaml  navigation_ros2_control_param.yaml
launch/: cmd_vel_and_odom_relay.launch.py  ignition_vmegarover_with_depot_world.launch.py  robot_state_publisher.launch.py  robot_state_publisher_on_ros2_control.launch.py  vmegarover_keyboardctrl.launch.py  vmegarover_mapping.launch.py  vmegarover_navigation.launch.py  vmegarover_save_map.launch.py  vmegarover_with_empty_world.launch.py  vmegarover_with_empty_world_on_ros2_control.launch.py  vmegarover_with_sample_world.launch.py  vmegarover_with_sample_world_on_ros2_control.launch.py
launch/utils/: classic_gazebo.launch.py  gz.launch.py  ignition_gazebo.launch.py  robot_description.launch.py  ros2_control.launch.py
maps/: vmegarover_samplemap.pgm  vmegarover_samplemap.yaml
models/vmegarover/: vmegarover.sdf
robots/: megarover.urdf  megarover.urdf.xacro  vmegarover.urdf.xacro
rviz/: mapping.rviz  navigation.rviz
scripts/: create_fix_urdf.py  create_fix_urdf_ignition.py
src/: pub_odom.cpp
urdf/: common.xacro
urdf/body/: body.gazebo.xacro  body.urdf.xacro  vbody.urdf.xacro
urdf/camera/: camera.gazebo.xacro  camera.urdf.xacro
urdf/lrf/: lrf.gazebo.xacro  lrf.urdf.xacro
urdf/wheel/: vwheel.urdf.xacro  wheel.gazebo.xacro  wheel.transmission.xacro
worlds/: ign_depot.sdf  vmegarover_sample.sdf  vmegarover_sample.world
worlds/ignition/: empty.sdf  (+1 more)
(+7 files in other folders)
